src/test/ui/codemap_tests/huge_multispan_highlight.stderr
error[E0596]: cannot borrow `x` as mutable, as it is not declared as mutable
  --> $DIR/huge_multispan_highlight.rs:90:13
   |
LL |     let x = "foo";
   |         - help: consider changing this to be mutable: `mut x`
...
LL |     let y = &mut x;
   |             ^^^^^^ cannot borrow as mutable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0596`.
